--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.6.0",
+    "i18next": "^19.8.4",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-alice-carousel": "^2.1.0",
