--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
-    "gatsby-plugin-sharp": "^2.8.0",
+    "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-source-contentful": "^3.1.1",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.6.0",
     "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-alice-carousel": "^2.1.0",
