--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-advanced-sitemap": "^1.5.6",
+    "gatsby-plugin-canonical-urls": "^2.8.0",
     "gatsby-plugin-google-gtag": "^2.5.0",
     "gatsby-plugin-layout": "^1.6.0",
     "gatsby-plugin-manifest": "^2.9.1",
