--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "gatsby-plugin-advanced-sitemap": "^1.5.6",
     "gatsby-plugin-canonical-urls": "^2.8.0",
     "gatsby-plugin-google-gtag": "^2.5.0",
+    "gatsby-plugin-image": "^1.9.0",
     "gatsby-plugin-layout": "^1.6.0",
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-offline": "^3.4.0",
     "gatsby-plugin-react-helmet": "^3.4.0",
     "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sharp": "^2.11.2",
-    "gatsby-source-contentful": "^3.1.1",
+    "gatsby-source-contentful": "^4.6.2",
+    "gatsby-source-datocms": "^2.6.16",
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-remark": "^2.11.1",
     "gatsby-transformer-sharp": "^2.6.0",
